@@ -56,17 +56,20 @@ window.addEventListener("load", function buildS4E()
 	{
 		getterMap:
 		[
-			["addonbar",              "addon-bar"],
-			["addonbarCloseButton",   "addonbar-closebutton"],
-			["browserBottomBox",      "browser-bottombox"],
-			["downloadButton",        "status4evar-download-button"],
-			["downloadButtonTooltip", "status4evar-download-tooltip"],
-			["statusWidget",          "status4evar-status-widget"],
-			["statusWidgetLabel",     "status4evar-status-text"],
-			["statusOverlay",         "statusbar-display"],
-			["strings",               "bundle_status4evar"],
-			["toolbarProgress",       "status4evar-progress-bar"],
-			["urlbarProgress",        "urlbar-progress-alt"]
+			["addonbar",               "addon-bar"],
+			["addonbarCloseButton",    "addonbar-closebutton"],
+			["browserBottomBox",       "browser-bottombox"],
+			["downloadButton",         "status4evar-download-button"],
+			["downloadButtonTooltip",  "status4evar-download-tooltip"],
+			["downloadButtonProgress", "status4evar-download-progress-bar"],
+			["downloadButtonLabel",    "status4evar-download-label"],
+			["downloadButtonAnchor",   "status4evar-download-anchor"],
+			["statusWidget",           "status4evar-status-widget"],
+			["statusWidgetLabel",      "status4evar-status-text"],
+			["statusOverlay",          "statusbar-display"],
+			["strings",                "bundle_status4evar"],
+			["toolbarProgress",        "status4evar-progress-bar"],
+			["urlbarProgress",         "urlbar-progress-alt"]
 		],
 
 		resetGetters: function()
@@ -662,19 +665,24 @@ window.addEventListener("load", function buildS4E()
 //
 	let s4e_downloadStatus =
 	{
-		_listening:      false,
-		_lastTime:       Infinity,
+		_listening:           false,
+		_lastTime:            Infinity,
 
-		_dlActive:       false,
-		_dlPaused:       false,
+		_dlActive:            false,
+		_dlPaused:            false,
+		_dlFinished:          false,
 
-		_dlCountStr:     null,
-		_dlTimeStr:      null,
+		_dlCountStr:          null,
+		_dlTimeStr:           null,
 
-		_dlProgressAvg:  0,
-		_dlProgressMax:  0,
-		_dlProgressMin:  0,
-		_dlProgressType: "active",
+		_dlProgressAvg:       0,
+		_dlProgressMax:       0,
+		_dlProgressMin:       0,
+		_dlProgressType:      "active",
+
+		_dlNotifyFinishTimer: 0,
+
+		_customizing:         false,
 
 		get PluralForm()
 		{
@@ -696,6 +704,20 @@ window.addEventListener("load", function buildS4E()
 			return this.DownloadManager = CC["@mozilla.org/download-manager;1"].getService(CI.nsIDownloadManager);
 		},
 
+		get PrivateBrowsingUtils()
+		{
+			delete this.PrivateBrowsingUtils;
+			try
+			{
+				CU.import("resource://gre/modules/PrivateBrowsingUtils.jsm", this);
+			}
+			catch(e)
+			{
+				this.PrivateBrowsingUtils = null;
+			}
+			return this.PrivateBrowsingUtils;
+		},
+
 		init: function()
 		{
 			if(!s4e_getters.downloadButton)
@@ -709,11 +731,24 @@ window.addEventListener("load", function buildS4E()
 				return;
 			}
 
-			this.DownloadManager.addListener(this);
-			Services.obs.addObserver(this, "private-browsing", true);
+			if(this.PrivateBrowsingUtils == null)
+			{
+				this.DownloadManager.addListener(this);
+				Services.obs.addObserver(this, "private-browsing", true);
+			}
+			else
+			{
+				this.DownloadManager.addPrivacyAwareListener(this);
+			}
 
 			this._listening = true;
 			this._lastTime = Infinity;
+
+			DownloadsButton._getAnchorInternal = DownloadsButton.getAnchor;
+			DownloadsButton.getAnchor = this.getAnchor;
+
+			DownloadsButton._releaseAnchorInternal = DownloadsButton.releaseAnchor;
+			DownloadsButton.releaseAnchor = function() {};
 
 			this.updateStatus();
 		},
@@ -723,8 +758,15 @@ window.addEventListener("load", function buildS4E()
 			if(this._listening)
 			{
 				this._listening = false;
+
 				this.DownloadManager.removeListener(this);
-				Services.obs.removeObserver(this, "private-browsing");
+				if(this.PrivateBrowsingUtils == null)
+				{
+					Services.obs.removeObserver(this, "private-browsing");
+				}
+
+				DownloadsButton.getAnchor = DownloadsButton._getAnchorInternal;
+				DownloadsButton.releaseAnchor = DownloadsButton._releaseAnchorInternal;
 			}
 		},
 
@@ -734,9 +776,15 @@ window.addEventListener("load", function buildS4E()
 			delete this.PluralForm;
 			delete this.DownloadUtils;
 			delete this.DownloadManager;
+			delete this.PrivateBrowsingUtils;
 		},
 
-		updateStatus: function()
+		customizing: function(val)
+		{
+			this._customizing = val;
+		},
+
+		updateStatus: function(lastState)
 		{
 			if(!s4e_getters.downloadButton)
 			{
@@ -744,10 +792,13 @@ window.addEventListener("load", function buildS4E()
 				return;
 			}
 
-			let numActive = this.DownloadManager.activeDownloadCount;
+			let isPBW = (this.PrivateBrowsingUtils != null && this.PrivateBrowsingUtils.isWindowPrivate(window))
+
+			let numActive = ((isPBW) ? this.DownloadManager.activePrivateDownloadCount : this.DownloadManager.activeDownloadCount);
 			if(numActive == 0)
 			{
 				this._dlActive = false;
+				this._dlFinished = (lastState && lastState == CI.nsIDownloadManager.DOWNLOAD_FINISHED);
 				this.updateButton();
 				this._lastTime = Infinity;
 				return;
@@ -763,11 +814,12 @@ window.addEventListener("load", function buildS4E()
 			let pausedMaxProgress = -Infinity;
 			let pausedMinProgress = Infinity;
 			let maxTime = -Infinity;
-			let dls = this.DownloadManager.activeDownloads;
+
+			let dls = ((isPBW) ? this.DownloadManager.activePrivateDownloads : this.DownloadManager.activeDownloads);
 			while(dls.hasMoreElements())
 			{
 				let dl = dls.getNext().QueryInterface(CI.nsIDownload);
-				if(dl.state == this.DownloadManager.DOWNLOAD_DOWNLOADING)
+				if(dl.state == CI.nsIDownloadManager.DOWNLOAD_DOWNLOADING)
 				{
 					if(dl.size > 0)
 					{
@@ -784,7 +836,7 @@ window.addEventListener("load", function buildS4E()
 						activeMinProgress = Math.min(activeMinProgress, currentProgress);
 					}
 				}
-				else if(dl.state == this.DownloadManager.DOWNLOAD_PAUSED)
+				else if(dl.state == CI.nsIDownloadManager.DOWNLOAD_PAUSED)
 				{
 					numPaused++;
 					if(dl.size > 0)
@@ -817,6 +869,7 @@ window.addEventListener("load", function buildS4E()
 			this._dlProgressType = dlProgressType + ((dlTotalSize == 0) ? "-unknown" : "");
 			this._dlPaused =       dlPaused;
 			this._dlActive =       true;
+			this._dlFinished =     false;
 
 			this.updateButton();
 		},
@@ -825,6 +878,8 @@ window.addEventListener("load", function buildS4E()
 		{
 			let download_button = s4e_getters.downloadButton;
 			let download_tooltip = s4e_getters.downloadButtonTooltip;
+			let download_progress = s4e_getters.downloadButtonProgress;
+			let download_label = s4e_getters.downloadButtonLabel;
 			if(!download_button)
 			{
 				return;
@@ -833,33 +888,75 @@ window.addEventListener("load", function buildS4E()
 			if(!this._dlActive)
 			{
 				download_button.collapsed = true;
-				download_button.label = download_tooltip.label = s4e_getters.strings.getString("noDownloads");
+				download_label.value = download_tooltip.label = s4e_getters.strings.getString("noDownloads");
 
-				download_button.pmCollapsed = true;
-				download_button.pmType = "active";
-				download_button.pmValue = 0;
+				download_progress.collapsed = true;
+				download_progress.value = 0;
+
+				if(this._dlFinished)
+				{
+					download_button.setAttribute("attention", "true");
+				}
 				return;
 			}
 
-			download_button.pmType = this._dlProgressType;
 			switch(s4e_service.downloadProgress)
 			{
 				case 2:
-					download_button.pmValue = this._dlProgressMax;
+					download_progress.value = this._dlProgressMax;
 					break;
 				case 3:
-					download_button.pmValue = this._dlProgressMin;
+					download_progress.value = this._dlProgressMin;
 					break;
 				default:
-					download_button.pmValue = this._dlProgressAvg;
+					download_progress.value = this._dlProgressAvg;
 					break;
 			}
-			download_button.pmCollapsed = (s4e_service.downloadProgress == 0);
+			download_progress.setAttribute("pmType", this._dlProgressType);
+			download_progress.collapsed = (s4e_service.downloadProgress == 0);
 
-			download_button.label = this.buildString(s4e_service.downloadLabel);
+			download_label.value = this.buildString(s4e_service.downloadLabel);
 			download_tooltip.label = this.buildString(s4e_service.downloadTooltip);
 
+			download_button.removeAttribute("attention");
 			download_button.collapsed = false;
+		},
+
+		clearFinished: function()
+		{
+			this._dlFinished = false;
+			let download_button = s4e_getters.downloadButton;
+			if(download_button)
+			{
+				download_button.removeAttribute("attention");
+			}
+		},
+
+		getAnchor: function(aCallback)
+		{
+			if(this._customizing)
+			{
+				aCallback(null);
+				return;
+			}
+
+			aCallback(s4e_getters.downloadButtonAnchor);
+		},
+
+		openPanel: function(aEvent)
+		{
+			this.clearFinished();
+
+			if(DownloadsCommon.useToolkitUI)
+			{
+				BrowserDownloadsUI();
+			}
+			else
+			{
+				DownloadsPanel.showPanel();
+			}
+
+			aEvent.stopPropagation();
 		},
 
 		buildString: function(mode)
@@ -880,14 +977,28 @@ window.addEventListener("load", function buildS4E()
 			}
 		},
 
-		onProgressChange: function()
+		onProgressChange: function(aWebProgress, aRequest, aCurSelfProgress, aMaxSelfProgress, aCurTotalProgress, aMaxTotalProgress, aDownload)
 		{
-			this.updateStatus();
+			this.updateStatus(aDownload.state);
 		},
 
-		onDownloadStateChange: function()
+		onDownloadStateChange: function(aState, aDownload)
 		{
-			this.updateStatus();
+			this.updateStatus(aDownload.state);
+
+			if(aDownload.state == CI.nsIDownloadManager.DOWNLOAD_FINISHED && this._dlNotifyFinishTimer == 0)
+			{
+				let download_button = s4e_getters.downloadButton;
+				if(download_button)
+				{
+					download_button.setAttribute("notification", "finish");
+					this._dlNotifyFinishTimer = window.setTimeout(function(self, button)
+					{
+						self._dlNotifyFinishTimer = 0;
+						button.removeAttribute("notification");
+					}, 1000, this, download_button);
+				}
+			}
 		},
 
 		onStateChange: function(aWebProgress, aRequest, aStateFlags, aStatus, aDownload) {},
@@ -1007,6 +1118,8 @@ window.addEventListener("load", function buildS4E()
 		{
 			status_label.value = s4e_getters.strings.getString("statusText");
 		}
+
+		s4e_downloadStatus.customizing(true);
 	}
 	caligon.status4evar.beforeCustomization = s4e_beforeCustomization;
 
@@ -1020,6 +1133,7 @@ window.addEventListener("load", function buildS4E()
 		s4e_statusService.buildTextOrder();
 		s4e_statusService.buildBinding();
 		s4e_downloadStatus.init();
+		s4e_downloadStatus.customizing(false);
 		s4e_updateSplitters(true);
 
 		s4e_service.updateWindow(window);
