@@ -1,140 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<!-- ***** BEGIN LICENSE BLOCK *****
-   - Version: MPL 1.1/GPL 2.0/LGPL 2.1
-   -
-   - The contents of this file are subject to the Mozilla Public License Version
-   - 1.1 (the "License"); you may not use this file except in compliance with
-   - the License. You may obtain a copy of the License at
-   - http://www.mozilla.org/MPL/
-   - 
-   - Software distributed under the License is distributed on an "AS IS" basis,
-   - WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
-   - for the specific language governing rights and limitations under the
-   - License.
-   -
-   - The Original Code is Status-4-Evar.
-   -
-   - The Initial Developer of the Original Code is 
-   - Matthew Turnbull <sparky@bluefang-logic.com>.
-   -
-   - Portions created by the Initial Developer are Copyright (C) 2013
-   - the Initial Developer. All Rights Reserved.
-   -
-   - Contributor(s):
-   -
-   - Alternatively, the contents of this file may be used under the terms of
-   - either the GNU General Public License Version 2 or later (the "GPL"), or
-   - the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
-   - in which case the provisions of the GPL or the LGPL are applicable instead
-   - of those above. If you wish to allow use of your version of this file only
-   - under the terms of either the GPL or the LGPL, and not to allow others to
-   - use your version of this file under the terms of the MPL, indicate your
-   - decision by deleting the provisions above and replace them with the notice
-   - and other provisions required by the GPL or the LGPL. If you do not delete
-   - the provisions above, a recipient may use your version of this file under
-   - the terms of any one of the MPL, the GPL or the LGPL.
-   - 
-   - ***** END LICENSE BLOCK ***** -->
-
-<bindings id="status4evar-bindings"
-          xmlns="http://www.mozilla.org/xbl"
-          xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul"
-          xmlns:xbl="http://www.mozilla.org/xbl">
-
-	<binding id="downloadbutton" display="xul:button" extends="chrome://global/content/bindings/toolbarbutton.xml#toolbarbutton">
-		<content>
-			<children includes="observes|template|menupopup|panel|tooltip"/>
-			<xul:stack>
-				<xul:image class="toolbarbutton-icon" xbl:inherits="validate,src=image,label" />
-				<xul:hbox class="dl-progress-wrapper" pack="end">
-					<xul:vbox class="dl-progress" xbl:inherits="collapsed=pmCollapsed">
-						<xul:box anonid="dl-progress-remainder" class="dl-progress-remainder" flex="100" />
-						<xul:box anonid="dl-progress-bar" class="dl-progress-bar" flex="0" />
-					</xul:vbox>
-				</xul:hbox>
-			</xul:stack>
-			<xul:label class="toolbarbutton-text" crop="right" flex="1" xbl:inherits="value=label,accesskey,crop" />
-		</content>
-
-		<implementation>
-			<field name="_progressBar" readonly="true"><![CDATA[
-				document.getAnonymousElementByAttribute(this, "anonid", "dl-progress-bar");
-			]]></field>
-
-			<field name="_progressRemainder" readonly="true"><![CDATA[
-				document.getAnonymousElementByAttribute(this, "anonid", "dl-progress-remainder");
-			]]></field>
-
-			<property name="pmValue">
-				<setter><![CDATA[
-					let p = Math.round(val);
-					let max = Math.round(this.pmMax);
-					if(p < 0)
-					{
-						p = 0;
-					}
-					else if(p > max)
-					{
-						p = max;
-					}
-
-					let c = this.pmValue;
-					if(p != c)
-					{
-						let delta = p - c;
-						if(delta < 0)
-						{
-							delta = -delta;
-						}
-
-						if(delta >= 1 || p == 0 || p == max)
-						{
-							this.setAttribute("pmValue", p);
-							this._progressBar.flex = p;
-							this._progressRemainder.flex = max - p;
-						}
-					}
-
-					return val;
-				]]></setter>
-				<getter><![CDATA[
-					return this.getAttribute("pmValue") || "0";
-				]]></getter>
-			</property>
-
-			<property name="pmMax">
-				<setter><![CDATA[
-					this.setAttribute("pmMax", (isNaN(val) ? 100 : Math.max(val, 1)));
-					this.pmValue = this.pmValue;
-					return val;
-				]]></setter>
-				<getter><![CDATA[
-					return this.getAttribute("pmMax") || "100";
-				]]></getter>
-			</property>
-
-			<property name="pmCollapsed">
-				<setter><![CDATA[
-					this.setAttribute("pmCollapsed", val);
-					return val;
-				]]></setter>
-				<getter><![CDATA[
-					return this.getAttribute("pmCollapsed") || "false";
-				]]></getter>
-			</property>
-
-			<property name="pmType">
-				<setter><![CDATA[
-					this.setAttribute("pmType", val);
-					return val;
-				]]></setter>
-				<getter><![CDATA[
-					return this.getAttribute("pmType") || "active";
-				]]></getter>
-			</property>
-		</implementation>
-	</binding>
-
-</bindings>
-
