@@ -45,7 +45,7 @@ pref("status4evar.advanced.urlbar.forceBinding", false);
 
 pref("status4evar.download.color.active", "#33FF33");
 pref("status4evar.download.color.paused", "#808080");
-pref("status4evar.download.force", false);
+pref("status4evar.download.force", true);
 pref("status4evar.download.label", 0);
 pref("status4evar.download.label.force", true);
 pref("status4evar.download.progress", 1);
