@@ -2,6 +2,8 @@ Version next
 * Drop support for Firefox 16.0 and older.
 * Fix protocol hiding in the toolbar and pop-up.
 * Update location bar progress styling.
+* Integrate with the new downloads panel.
+* Integrate with the new per-window private browsing.
 * Updated translations for: bg-BG, cs, da, de, dsb, el, eo, es-ES, fr, he, hsb, it-IT, ja-JP, nb-NO, nl, pt-BR, ro, zh-CN, zh-TW
 
 Version 2012.11.11.16b
